--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -11,11 +11,13 @@
   <script defer src="/build/bundle.js"></script>
   <link rel='stylesheet' href='/build/bundle.css'>
   
-  <script defer src="/build/users.js"></script>
-  <link rel='stylesheet' href='/build/users.css'>
+  <script defer src="/build/dashboard.js"></script>
+  <link rel='stylesheet' href='/build/dashboard.css'>
 </head>
 
 <body>
+  <div id="signin-container">
+  </div>
   USER
 </body>
 </html>
