feat: Added Landing page motivation letter

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,10 @@
             Documentation
           </a>
         </div>
+
+        <a class="navbar-item">
+          Blog
+        </a>
       </div>
 
       <div class="navbar-end">
@@ -66,11 +70,49 @@
         <div class='column is-6 has-vcentered-content'>
           <div class='has-text-centered-mobile'>
             <h1 id="landing-title" class='title is-1'>Gamified<br />Loyalty Programs</h1>
-            <h1 id="landing-subtitle" class='is-3 is-italic'>for fun & profit 😎</h1>
+            <h1 id="landing-subtitle" class='is-3'><i>for fun & profit !</i> 😎</h1>
           </div>
         </div>
         <div class='column is-6 is-hidden-mobile has-hvcentered-content'>
           <p> an Image should come here !</p>
+        </div>
+      </div>
+    </section>
+    <section id="motivation" class="section">
+      <div class="container">
+        <div class="content is-medium">
+          <h1 class="title is-3">🚀 Motivation</h1>
+          <h1 class="subtitle is-5">A journey of a thousand miles begins with a single step.</h1>
+          <p>
+            Most brands Loyalty Programs out there are built on the same basic idea: the more you buy, the more you save. We are <i>*so*</i> used to it we carry a bunch of cards in our wallets and handbags.
+          </p>
+          <p class="citation">
+            But these don't make us feel more <i>*loyal*</i> to these brands.
+          </p>
+          </p>
+            We don't go to a specific store because we know we nearly have the required amount of patiently gathered points over the last six months to get that 1% discount. We go there because we want to buy something and oh! it appears we have a loyalty card for that store! The purchase acts are definitely not driven by the Loyalty Programs in place. Same applies to web-stores.
+          </p>
+          <p>
+            All of this because of the same recurring fallacy: <strong>most Loyalty Programs, despite their name, don't reward the more <i>*loyal*</i> customers, but the more <i>*buying*</i> customers</strong>. And this nearly always mechanically excludes the more engaged ones (who are not necessarily the most buying ones but are the brands' most active ambassadors).
+          </p>
+          <p class="citation">
+            We thought there must be a better way.
+          </p>
+          <p>
+            A better way to engage people on the long haul, a better way to reward customers based on their <i>*effective*</i> loyalty to a brand. No more one-size-fits-all strategy.
+          </p>
+          <p>
+            And this is where gamification comes into place. By combining proven yet powerful game mechanics, we could design compelling Loyalty Programs to raise customer engagement.
+          </p>
+          <p>
+            As engineers and game players, we thought it was worth giving it a try. So we decided to follow Steve Blank's strategy: test the problem, test the solution, iterate on what you learn from your adventurous <i>*earlyvangelists*</i>.
+            <br />
+            You are watching our very first attempt; we are still testing the problem. I hope you will enjoy the journey.
+          </p>
+          <p>
+            Daniel Vergeylen,<br />
+            CEO of Sigmadelta.io
+          </p>
         </div>
       </div>
     </section>
