--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
   <link rel='icon' type='image/png' href='/favicon.png'>
 
-  <!-- Always included: Fontawesome, Bulma, Utils -->
+  <!-- Always included: Bulma, Utils -->
   <script defer src="/build/bundle.js"></script>
   <link rel='stylesheet' href='/build/bundle.css'>
 
