--- a/public/index.html
+++ b/public/index.html
@@ -90,10 +90,13 @@
             But these don't make us feel more <i>*loyal*</i> to these brands.
           </p>
           </p>
-            We don't go to a specific store because we know we nearly have the required amount of patiently gathered points over the last six months to get that 1% discount. We go there because we want to buy something and oh! it appears we have a loyalty card for that store! The purchase acts are definitely not driven by the Loyalty Programs in place. Same applies to web-stores.
+            We don't go to a specific store because we know we nearly have the required amount of patiently gathered points over the last six months to get that 1% discount. We go there because we want to buy something and oh! it appears we have a loyalty card for that store! Purchase acts are definitely not driven by the Loyalty Programs in place.
+          </p>
+          <p class="citation">
+            Same applies to web-stores.
           </p>
           <p>
-            All of this because of the same recurring fallacy: <strong>most Loyalty Programs, despite their name, don't reward the more <i>*loyal*</i> customers, but the more <i>*buying*</i> customers</strong>. And this nearly always mechanically excludes the more engaged ones (who are not necessarily the most buying ones but are the brands' most active ambassadors).
+            All of this because of the same recurring fallacy: <strong>most Loyalty Programs, despite their name, don't reward the most <i>*loyal*</i> customers, but the most <i>*buying*</i> customers</strong>. And this nearly always mechanically excludes the most engaged ones (who are more often than not distinct customers).
           </p>
           <p class="citation">
             We thought there must be a better way.
@@ -106,7 +109,8 @@
           </p>
           <p>
             As engineers and game players, we thought it was worth giving it a try. So we decided to follow Steve Blank's strategy: test the problem, test the solution, iterate on what you learn from your adventurous <i>*earlyvangelists*</i>.
-            <br />
+          </p>
+          <p>
             You are watching our very first attempt; we are still testing the problem. I hope you will enjoy the journey.
           </p>
           <p>
