fix: removed dropdown menu from Documentation link

--- a/public/index.html
+++ b/public/index.html
@@ -44,11 +44,9 @@
           How it works
         </a>
 
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link">
-            Documentation
-          </a>
-        </div>
+        <a class="navbar-item">
+          Documentation
+        </a>
 
         <a class="navbar-item">
           Blog
