--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -8,16 +8,63 @@
 
   <link rel='icon' type='image/png' href='/favicon.png'>
 
+  <!-- Always included: Bulma, Utils -->
   <script defer src="/build/bundle.js"></script>
   <link rel='stylesheet' href='/build/bundle.css'>
   
+  <!-- Dashboard specific content -->
   <script defer src="/build/dashboard.js"></script>
   <link rel='stylesheet' href='/build/dashboard.css'>
 </head>
 
 <body>
-  <div id="signin-container">
-  </div>
+  <!-- NAVBAR -->
+  <nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="https://place2be.io">
+        <svg id="logo">
+          <use href='images/sprite.svg#logo' />
+        </svg>
+        <svg id="brand" class="left-spaced">
+          <use href='images/sprite.svg#brand' />
+        </svg>
+      </a>
+
+      <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+        data-target="navBarLinks">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
+    </div>
+
+    <div id="navBarLinks" class="navbar-menu">
+      <div class="navbar-start">
+        <a class="navbar-item">
+          How it works
+        </a>
+
+        <a class="navbar-item">
+          Documentation
+        </a>
+
+        <a class="navbar-item">
+          Blog
+        </a>
+      </div>
+
+      <div class="navbar-end">
+        <div class="navbar-item">
+          <div id="signin-container">
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+<main id="main">
   USER
+</main>
+
 </body>
 </html>
