--- a/public/index.html
+++ b/public/index.html
@@ -31,14 +31,14 @@
       </a>
 
       <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-        data-target="navbarBasicExample">
+        data-target="navBarLinks">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
       </a>
     </div>
 
-    <div id="navbarBasicExample" class="navbar-menu">
+    <div id="navBarLinks" class="navbar-menu">
       <div class="navbar-start">
         <a class="navbar-item">
           How it works
