--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -15,6 +15,7 @@
   <!-- Dashboard specific content -->
   <script defer src="/build/dashboard.js"></script>
   <link rel='stylesheet' href='/build/dashboard.css'>
+  <link rel='stylesheet' href='/build/dashboard-components.css'>
 </head>
 
 <body>
