--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
   <!-- JS and components needed in static pages (auth, ...) -->
   <script defer src="/build/static.js"></script>
   <link rel='stylesheet' href='/build/static.css'>
+  <link rel='stylesheet' href='/build/static-components.css'>
 </head>
 
 <body>
