fix: removed Auth0 dependency and replaced it with custom jwt handling
This allows a total control over the JWT and the flow doing authenticated requests to the API.

While already very good, this is still WIP and dashboard stuff needs to be adapted and fully tested.

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
 
       <div class="navbar-end">
         <div class="navbar-item">
-          <div id="signin-container">
+          <div id="credentials-buttons">
           </div>
         </div>
       </div>
