refactor: simplified Styling
Styling is a vast issue. I want an easy way to adapt the primary/secondary colors,
event leaving it to the user or something.

--- a/public/index.html
+++ b/public/index.html
@@ -65,8 +65,8 @@
 
   <main>
     <section class="section">
-      <div class='columns is-5'>
-        <div class='column is-6 has-vcentered-content'>
+      <div class='columns is-5 has-vcentered-content'>
+        <div class='column is-6'>
           <div class='has-text-centered-mobile'>
             <h1 id="landing-title" class='title is-1'>Gamified<br />Loyalty Programs</h1>
             <h1 id="landing-subtitle" class='is-3'><i>for fun & profit !</i> 😎</h1>
@@ -110,7 +110,7 @@
             As engineers and game players, we thought it was worth giving it a try. So we decided to follow Steve Blank's strategy: test the problem, test the solution, iterate on what you learn from your adventurous <i>*earlyvangelists*</i>.
           </p>
           <p>
-            You are watching our very first attempt; we are still testing the problem. I hope you will enjoy the journey.
+            You are watching our very first attempt; we are still testing the problem. I hope you will enjoy the <a href="/credentials.html">journey</a>.
           </p>
           <p>
             Daniel Vergeylen,<br />
