feat: Moved Emoji to Twitter Emojis instead of FontAwesome
These are free and very colorful, giving a feeling of "fun".
Some FA icons are still used, sign-in / sign-up / sign-out / external-link-square
but these are more functional icons, not meant to bring some fun!

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,11 @@
         <div class='column is-6'>
           <div class='has-text-centered-mobile'>
             <h1 id="landing-title" class='title is-1'>Gamified<br />Loyalty Programs</h1>
-            <h1 id="landing-subtitle" class='is-3'><i>for fun & profit !</i> 😎</h1>
+            <h1 id="landing-subtitle" class='is-3'><i>for fun & profit !</i>
+              <svg class="twemoji">
+                <use href="../images/twemoji-sprite.svg#smiling_face_with_sunglasses" />
+              </svg>
+            </h1>
           </div>
         </div>
         <div class='column is-6 is-hidden-mobile has-hvcentered-content'>
@@ -80,7 +84,11 @@
     <section id="motivation" class="section">
       <div class="container">
         <div class="content is-medium">
-          <h1 class="title is-3">🚀 Motivation</h1>
+          <h1 class="title is-3">
+            <svg class="twemoji">
+              <use href="../images/twemoji-sprite.svg#rocket" />
+            </svg>
+            Motivation</h1>
           <h1 class="subtitle is-5">A journey of a thousand miles begins with a single step.</h1>
           <p>
             Most brands Loyalty Programs out there are built on the same basic idea: the more you buy, the more you save. We are <i>*so*</i> used to it we carry a bunch of cards in our wallets and handbags.
@@ -110,7 +118,7 @@
             As engineers and game players, we thought it was worth giving it a try. So we decided to follow Steve Blank's strategy: test the problem, test the solution, iterate on what you learn from your adventurous <i>*earlyvangelists*</i>.
           </p>
           <p>
-            You are watching our very first attempt; we are still testing the problem. I hope you will enjoy the <a href="/credentials.html">journey</a>.
+            You are watching our very first attempt; we are still testing the problem. I hope you will enjoy the <a href="/credentials.html?signup=true">journey</a>.
           </p>
           <p>
             Daniel Vergeylen,<br />
