--- a/credentials.html
+++ b/credentials.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html id="dashboard" lang="en">
+<html lang="en">
+
 <head>
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width,initial-scale=1'>
@@ -11,11 +12,11 @@
   <!-- Always included: Bulma, Utils -->
   <script defer src="/build/bundle.js"></script>
   <link rel='stylesheet' href='/build/bundle.css'>
-  
-  <!-- Dashboard specific content -->
-  <script defer src="/build/dashboard.js"></script>
-  <link rel='stylesheet' href='/build/dashboard.css'>
-  <link rel='stylesheet' href='/build/dashboard-components.css'>
+
+  <!-- JS and components needed in static pages (auth, ...) -->
+  <script defer src="/build/credentials.js"></script>
+  <link rel='stylesheet' href='/build/credentials.css'>
+  <link rel='stylesheet' href='/build/credentials-components.css'>
 </head>
 
 <body>
@@ -31,8 +32,7 @@
         </svg>
       </a>
 
-      <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-        data-target="navBarLinks">
+      <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navBarLinks">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
@@ -55,16 +55,14 @@
       </div>
 
       <div class="navbar-end">
-        <div class="navbar-item">
-          <div id="credentials-buttons">
-          </div>
-        </div>
       </div>
     </div>
   </nav>
 
-<main id="main">
-</main>
-
+  <main>
+    <section id="credentials" class="section">
+    </section>
+  </main>
 </body>
+
 </html>
