--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <!-- JS and components needed in static pages (auth, ...) -->
   <script defer src="/build/static.js"></script>
   <link rel='stylesheet' href='/build/static.css'>
+  <link rel='stylesheet' href='/build/static-components.css'>
 </head>
 
 <body>
@@ -31,14 +32,14 @@
       </a>
 
       <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-        data-target="navbarBasicExample">
+        data-target="navBarLinks">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
       </a>
     </div>
 
-    <div id="navbarBasicExample" class="navbar-menu">
+    <div id="navBarLinks" class="navbar-menu">
       <div class="navbar-start">
         <a class="navbar-item">
           How it works
@@ -55,7 +56,7 @@
 
       <div class="navbar-end">
         <div class="navbar-item">
-          <div id="signin-container">
+          <div id="credentials-buttons">
           </div>
         </div>
       </div>
@@ -64,11 +65,15 @@
 
   <main>
     <section class="section">
-      <div class='columns is-5'>
-        <div class='column is-6 has-vcentered-content'>
+      <div class='columns is-5 has-vcentered-content'>
+        <div class='column is-6'>
           <div class='has-text-centered-mobile'>
             <h1 id="landing-title" class='title is-1'>Gamified<br />Loyalty Programs</h1>
-            <h1 id="landing-subtitle" class='is-3'><i>for fun & profit !</i> 😎</h1>
+            <h1 id="landing-subtitle" class='is-3'><i>for fun & profit !</i>
+              <svg class="twemoji">
+                <use href="../images/twemoji-sprite.svg#smiling_face_with_sunglasses" />
+              </svg>
+            </h1>
           </div>
         </div>
         <div class='column is-6 is-hidden-mobile has-hvcentered-content'>
@@ -79,7 +84,11 @@
     <section id="motivation" class="section">
       <div class="container">
         <div class="content is-medium">
-          <h1 class="title is-3">🚀 Motivation</h1>
+          <h1 class="title is-3">
+            <svg class="twemoji">
+              <use href="../images/twemoji-sprite.svg#rocket" />
+            </svg>
+            Motivation</h1>
           <h1 class="subtitle is-5">A journey of a thousand miles begins with a single step.</h1>
           <p>
             Most brands Loyalty Programs out there are built on the same basic idea: the more you buy, the more you save. We are <i>*so*</i> used to it we carry a bunch of cards in our wallets and handbags.
@@ -109,7 +118,7 @@
             As engineers and game players, we thought it was worth giving it a try. So we decided to follow Steve Blank's strategy: test the problem, test the solution, iterate on what you learn from your adventurous <i>*earlyvangelists*</i>.
           </p>
           <p>
-            You are watching our very first attempt; we are still testing the problem. I hope you will enjoy the journey.
+            You are watching our very first attempt; we are still testing the problem. I hope you will enjoy the <a href="/credentials.html?signup=true">journey</a>.
           </p>
           <p>
             Daniel Vergeylen,<br />
